syntax = "proto3";

package backend;

option go_package = "./fancygame";

import "shared.proto";

// register
message RegisterInfo{
    string Account = 1;
    string Password = 2;
    shared.AvatarEnum Avatar = 3;
    shared.GenderEnum Gender = 4;
}  

message RegisterRes{
    int64 StatusCode = 1;
    string Message = 2;
    RegisterResInfo Data = 3;
}

message RegisterResInfo{
    shared.AvatarEnum Avatar = 2;
    shared.GenderEnum Gender = 3;
    bool IsAdmin = 4;
    int64 Balance = 5;
}

// login
message LoginInfo{
    string Account = 1;
    string Password = 2;
}

message LoginRes{
    int64 StatusCode = 1;
    string Message = 2;
    LoginResInfo Data = 3;
}

message LoginResInfo{
    shared.AvatarEnum Avatar = 2;
    shared.GenderEnum Gender = 3;
    bool IsAdmin = 4;
    int64 Balance = 5;
}

// logout
message LogoutInfo{
    string Account = 1;
    int64 Balance = 2;
}

message LogoutRes{
    int64 StatusCode = 1;
    string Message = 2;
}